--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.20.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.7",
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
