--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
     "antd": "^4.19.5",
+    "i18next": "^21.6.16",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.7",
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
