--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.3",
