--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.20.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-google-login": "^5.2.2",
     "react-i18next": "^11.16.7",
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
