--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
     "antd": "^4.20.1",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.7",
+    "react-modal": "^3.15.1",
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -57,6 +59,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.8",
+    "@types/react-modal": "^3.13.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
