added .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
-﻿
+﻿# Connect BE
+ 
+REACT_APP_BE_URL=your_backend_app_url
+
+
+# RTQ Query API
+
+REACT_APP_PASSWORD_API=any_words(example: passwordApi, password)
