finished  sign up component with google button

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3005
-REACT_APP_GOOGLE_CLIENT_ID=361222498523-k30tc2octab8mtoahcbb899fqs5j53pa.apps.googleusercontent.com
+REACT_APP_GOOGLE_CLIENT_ID="361222498523-k30tc2octab8mtoahcbb899fqs5j53pa.apps.googleusercontent.com"
+REACT_APP_SERVER_URL='http://localhost:3000/'
