removed .env from git & changed .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
 ﻿# Connect BE
- 
+
 REACT_APP_BE_URL=your_backend_app_url
 
 
 # RTQ Query API
 
-REACT_APP_PASSWORD_API=any_words(example: passwordApi, password)
+REACT_APP_PASSWORD_API="any_words(example: passwordApi, password)"
+
+# custom port
+PORT=3005
+# Google client id  from Google Cloud Platform
+# https://console.cloud.google.com/apis/credentials
+REACT_APP_GOOGLE_CLIENT_ID="361222498523-k30tc2octab8mtoahcbb899fqs5j53pa.apps.googleusercontent.com"
+
+# development server
+REACT_APP_SERVER_URL='http://localhost:3000/'
