finished login use google account

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,4 @@
-﻿# Connect BE
-
-REACT_APP_BE_URL=your_backend_app_url
-
-
-# RTQ Query API
-
-REACT_APP_PASSWORD_API="any_words(example: passwordApi, password)"
-
-# custom port
+﻿# custom port
 PORT=3005
 # Google client id  from Google Cloud Platform
 # https://console.cloud.google.com/apis/credentials
