--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,6 @@
 {
-  "useTabs": false,
-  "printWidth": 80,
-  "tabWidth": 2,
-  "singleQuote": false,
-  "trailingComma": "es5", 
-  "bracketSpacing": true,
-  "parser": "flow",
+  "trailingComma": "es5",
+  "tabWidth": 4,
   "semi": true,
-  "endOfLine": "auto"
+  "singleQuote": true
 }
