--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "useUnknownInCatchVariables": false,
   },
   "include": [
-    "src"
-, "src/common/Button/.tsx"  ]
+    "src",
+    "src/common/Button/.tsx"
+  ]
 }
