--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "antd": "^4.20.1",
     "axios": "^0.27.2",
     "i18next": "^21.6.16",
+    "json-server": "^0.17.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-google-login": "^5.2.2",
