--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "start-3005": "PORT=3005 react-scripts start",
+    "start:server": "json-server --watch db.json --port 3002",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
