--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
     "antd": "^4.20.1",
+    "antd-img-crop": "^4.2.3",
     "axios": "^0.27.2",
     "i18next": "^21.6.16",
     "react": "^18.0.0",
