--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
         "jsx": "react-jsx",
         "useUnknownInCatchVariables": false
     },
-    "include": ["src", "src/common/Button/.tsx"]
+    "include": ["src", "src/components/Button/.tsx"]
 }
