--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ PORT=3005
 REACT_APP_GOOGLE_CLIENT_ID="361222498523-k30tc2octab8mtoahcbb899fqs5j53pa.apps.googleusercontent.com"
 
 # development server
-REACT_APP_SERVER_URL='http://localhost:3000/'
+REACT_APP_SERVER_URL='http://localhost:3000/api'
