--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,14 @@
       }
     ],
     "import/no-unresolved": "off",
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true,
+        "optionalDependencies": false,
+        "peerDependencies": false
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
