check husky & eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -87,7 +87,7 @@
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "react/require-default-props": "off",
-    "no-console": "error",
+    "no-console": "error"
   },
   "settings": {
     "import/resolver": {
