--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@mdx-js/react": "^1.6.22",
     "@storybook/addon-actions": "^6.5.8",
     "@storybook/addon-essentials": "^6.5.8",
     "@storybook/addon-interactions": "^6.5.8",
